--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@ JWT_SECRET=supersecret
 
 
 # MySQL
-DATABASE_URL=
+DATABASE_URL=mysql://avnadmin:AVNS_08Of4GpfaoKyj0ql9DP@bettime-bettime.g.aivencloud.com:11510/defaultdb?ssl-mode=REQUIRED
+
 
 DB_HOST=localhost
 DB_USER=root
