--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/s3-request-presigner": "^3.882.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "canvas": "^3.1.0",
     "compression": "^1.7.4",
