--- a/.env
+++ b/.env
@@ -33,3 +33,10 @@ JWT_EXPIRES_IN=7d
 
 # Pricing / Currency
 DEFAULT_CURRENCY=NGN
+
+ADMIN_USERNAME=Bigsaila
+ADMIN_EMAIL=adminbigsaila@bettime.com
+ADMIN_PASSWORD=Okikiokiki70@081634
+BCRYPT_ROUNDS=12
+ADMIN_TOKEN_TTL_SECONDS=28800
+ADMIN_SEED_ENABLED=1
