--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ JWT_EXPIRES_IN=7d
 
 # HTTP / CORS
 # Comma-separated allowed origins for frontends. Keep this in sync with the server's allowed origins list.
-FRONTEND_ORIGIN=https://bettime.onrender.com,https://bettime-adminpanel.onrender.com
+FRONTEND_ORIGIN=https://bettime.onrender.com,https://bettime-adminpanel.onrender.com,https://www.bettime.space
 
 # MySQL - Aiven (primary) / local fallback
 DATABASE_URL=mysql://avnadmin:AVNS_p92YY84gHOnd_--4ZRs@bettime-bettime.g.aivencloud.com:11510/defaultdb?ssl-mode=REQUIRED
@@ -27,7 +27,7 @@ R2_PUBLIC_DOMAIN=ibm.90de5ff37d6c78d687ca2ab2edc1601a.r2.cloudflarestorage.com
 
 # Paystack
 PAYSTACK_SECRET=sk_test_b728b732e25814cb99075514a45fec611816eb5c
-FRONTEND_CALLBACK_URL=https://bettime.onrender.com?reference={reference}
+FRONTEND_CALLBACK_URL=https://www.bettime.space?reference={reference}, https://bettime.onrender.com?reference={reference}
 
 # Admin seed
 ADMIN_USERNAME=Bigsaila
