--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ JWT_EXPIRES_IN=7d
 
 # HTTP / CORS
 # Comma-separated allowed origins for frontends. Keep this in sync with the server's allowed origins list.
-FRONTEND_ORIGIN=https://bettime.onrender.com,https://bettime-adminpanel.onrender.com,https://www.bettime.space
+FRONTEND_ORIGIN=https://www.bettime.space,https://bettime.onrender.com,https://bettime-adminpanel.onrender.com
 
 # MySQL - Aiven (primary) / local fallback
 DATABASE_URL=mysql://avnadmin:AVNS_p92YY84gHOnd_--4ZRs@bettime-bettime.g.aivencloud.com:11510/defaultdb?ssl-mode=REQUIRED
@@ -39,7 +39,7 @@ ADMIN_SEED_ENABLED=1
 
 
 # Disable rate limiting for development (true|false). Set to true to turn off rate limits.
-DISABLE_RATE_LIMIT=false
+DISABLE_RATE_LIMIT=true
 
 # Trust proxy hops. Use 1 for a single trusted proxy (e.g., Render, Heroku, Cloudflare).
 # Set to a number or comma-separated list of IPs/CIDRs for stricter control.
